--- a/VacationPlanner/VacationPlanner.csproj
+++ b/VacationPlanner/VacationPlanner.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Node.js" Version="5.3.0" />
+    <PackageReference Include="Realm" Version="11.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
