--- a/VacationPlanner/appsettings.json
+++ b/VacationPlanner/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Jwt": {
+    "Key": "865431412635843216143861356816841486644",
+    "Issuer": "http://localhost:4200",
+    "Audience": "http://localhost:4200",
+    "ExpiryDays": 7
+  }
 }
