--- a/VacationPlanner/appsettings.json
+++ b/VacationPlanner/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "VacationPlannerDatabase": "Data Source=HASELHORST-LAP\\SQL2019;Database=Vacationplanner;User ID=sa;Password=sa;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "VacationPlannerDatabase": "Server=localhost;Database=master;Trusted_Connection=True;"
   },
     "Logging": {
     "LogLevel": {
